--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <div>
     <h1>Año de la decada 2023</h1>
   </div>
+
+  <div class="Conflictos">
+    <h1>Conflictos rama1</h1>
+
+  </div> /
 </body>
 </html>
